<resources>
    <string name="app_name">demoImitationMovie</string>
    <!--main 模块-->
    <string name="main_tab_home">首页</string>
    <string name="main_tab_movie">电影</string>
    <string name="main_tab_cinema">影院</string>
    <string name="main_tab_movieshow">演出</string>
    <string name="main_tab_my">我的</string>
    <string name="main_tab_default">  </string>


    <!--新闻模块-->
    <string name="newsSort_channelCommend">推荐频道</string>
    <string name="newsSort_channelLocal">地方频道</string>
    <string name="newsSort_title">频道定制</string>

    <!--登录模块-->
    <string name="login_login">登录</string>
    <string name="login_title_code">手机号快捷登录</string>
    <string name="login_title_pwd">账号密码登录</string>
    <string name="login_hint_phone">手机号</string>
    <string name="login_hint_code">验证码</string>
    <string name="login_agreement">协议</string>


    <!--首页-->
    <string name="home_filesort_movie">电影</string>
    <string name="home_filesort_file">电视剧</string>
    <string name="home_filesort_variety">综艺</string>
    <string name="home_filesort_book">书籍</string>

    <!--首页&#45;&#45;title&#45;&#45;location-->
    <string name="layout_location_text">北京</string>



    <!--<string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>-->
    <string name="header_float_behavior" translatable="false">com.sexyhair.demoimitationmovie.components.HeaderScrollingBehavior</string>
    <string name="header_float_behavior1" translatable="false">com.sexyhair.demoimitationmovie.components.HeaderFloatBehavior</string>

</resources>
